--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-server": "cd backend && nodemon server.js --exec babel-node --presets es2015,stage-0",
     "start-client": "cd client && npm start",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "start-dev": "concurrently \"npm run start-server\" \"npm run start-client\""
+    "start": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
   "author": "Daniel Cat",
   "license": "ISC",
