--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "concurrently": "^3.5.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "mysql": "^2.15.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "sqlite3": "^4.0.1"
   }
 }
