--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "cd backend && nodemon server.js --exec babel-node --presets es2015,stage-0",
     "start-client": "cd client && npm start",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "start": "concurrently \"npm run start-server\" \"npm run start-client\""
+    "start-static": "cd client && npm run build",
+    "start-dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
+    "start-prod": "concurrently \"npm run start-server\" \"npm run start-static\""
+
   },
   "author": "Daniel Cat",
   "license": "ISC",
